completed basic drawer and zoo map

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,59 @@
 <ion-menu [content]="mycontent">
-    <ion-content>
+    <ion-content style="background-color: #f2f2f2;">
+        <img src="assets/imgs/profile_bgcover.jpg" alt="">
         <ion-list>
-            <p>some menu content, could be list items</p>
+            <ion-item menuClose *ngFor="let p of pages" no-lines (click)="openPage(p)">
+                <img class="menu-icon" src="{{p.asset}}" alt="">
+                <span class="title">{{p.title}}</span>
+            </ion-item>
+            <!-- <ion-item no-lines>
+                <img class="menu-icon" src="assets/imgs/icon_menukiri_home.png" alt="">
+                <span class="title">Home page</span>
+            </ion-item>
+            <ion-item no-lines>
+                <img class="menu-icon" src="assets/imgs/icon_menukiri_map.png" alt="">
+                <span class="title">Zoo Map</span>
+            </ion-item>
+            <ion-item no-lines>
+                <img class="menu-icon" src="assets/imgs/icon_menukiri_animal.png" alt="">
+                <span class="title">Animal Collection</span>
+            </ion-item>
+            <ion-item no-lines>
+                <img class="menu-icon" src="assets/imgs/icon_menukiri_profile.png" alt="">
+                <span class="title">Visitor Information</span>
+            </ion-item>
+            <ion-item no-lines>
+                <img class="menu-icon" src="assets/imgs/icon_menukiri_settings.png" alt="">
+                <span class="title">Settings</span>
+            </ion-item> -->
         </ion-list>
+        <div class="button-list">
+            <h2 class="fun-center-title">ZOO FUN CENTER</h2>
+            <ion-buttons>
+                <button ion-button block color="button-color">
+                    <div class="button-content">
+                        <img class="button-icon" src="assets/imgs/icon_menukiri_badge.png" alt="">
+                        <p class="button-title">ANIMAL BADGE COLLECTION</p>
+                    </div>
+                </button>
+            </ion-buttons>
+            <ion-buttons>
+                <button ion-button block color="button-color2">
+                    <div class="button-content">
+                        <img class="button-icon" src="assets/imgs/icon_menukiri_photo.png" alt="">
+                        <p class="button-title text-icon-color">PHOTO BOOTH</p>
+                    </div>
+                </button>
+            </ion-buttons>
+            <ion-buttons>
+                <button ion-button block color="button-color">
+                    <div class="button-content">
+                        <img class="button-icon" src="assets/imgs/icon_menukiri_trivia.png" alt="">
+                        <p class="button-title">ANIMAL TRIVIAS</p>
+                    </div>
+                </button>
+            </ion-buttons>
+        </div>
     </ion-content>
 </ion-menu>
 
