add badges and animal collection screen

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -77,3 +77,10 @@ ion-buttons {
 .button-md, .button-ios {
     border-radius: 4px;
 }
+
+.modal-wrapper {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
