--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,27 +29,11 @@
         </ion-list>
         <div class="button-list">
             <h2 class="fun-center-title">ZOO FUN CENTER</h2>
-            <ion-buttons>
-                <button ion-button block color="button-color">
+            <ion-buttons *ngFor="let page of buttonPages">
+                <button menuClose (click)="openPageButton(page)" ion-button block color="{{page.button_color}}">
                     <div class="button-content">
-                        <img class="button-icon" src="assets/imgs/icon_menukiri_badge.png" alt="">
-                        <p class="button-title">ANIMAL BADGE COLLECTION</p>
-                    </div>
-                </button>
-            </ion-buttons>
-            <ion-buttons>
-                <button ion-button block color="button-color2">
-                    <div class="button-content">
-                        <img class="button-icon" src="assets/imgs/icon_menukiri_photo.png" alt="">
-                        <p class="button-title text-icon-color">PHOTO BOOTH</p>
-                    </div>
-                </button>
-            </ion-buttons>
-            <ion-buttons>
-                <button ion-button block color="button-color">
-                    <div class="button-content">
-                        <img class="button-icon" src="assets/imgs/icon_menukiri_trivia.png" alt="">
-                        <p class="button-title">ANIMAL TRIVIAS</p>
+                        <img class="button-icon" src="{{page.asset}}" alt="">
+                        <p class="button-title {{page.text_color}} ">{{page.title}}</p>
                     </div>
                 </button>
             </ion-buttons>
