--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -69,7 +69,7 @@
 
     .bannermenu-title {
         color: #fff;
-        font-size: .8em;
+        font-size: 12px;
     }
 }
 
@@ -82,6 +82,8 @@
 }
 
 #fun-facts {
+    font-size: 17px;
+    font-family: 'Londrina Solid' !important;
     padding: 8px 10px;
     background-color: #8eda20;
     box-shadow: 0px 1.3px 2.5px -0.5px rgba(0, 0, 0, 0.5);
@@ -115,6 +117,10 @@ div {
     ion-card {
         .label-md, .label-ios {
             margin: 0px;
+        }
+
+        .item-divider-md {
+            background-color: #fff !important;
         }
 
         .item-divider-md, .item-divider-ios {
@@ -155,11 +161,12 @@ div {
 
         ion-card-content {
             .about-text {
+                text-transform: uppercase;
                 margin-right: 10px;
             }
 
             .share-text {
-                color: orangered;
+                color: #ef7004;
             }
         }
     }
@@ -173,23 +180,29 @@ div {
     ion-card {
         ion-card-header {
             .circle-volume {
-                margin-top: 2px;
-                margin-left: 2px;
+                margin-top: 5px;
+                margin-left: 5px;
                 position: absolute;
-                    height: 25px;
-                    width: 25px;
-                    background-color: rgba(255, 255, 255, 0.9);
-                    border-radius: 50%;
-                    text-align: center;
+                height: 25px;
+                width: 25px;
+                background-color: rgba(255, 255, 255, 0.9);
+                border-radius: 50%;
+                text-align: center;
+
                 ion-icon {
-                    padding-top: 10%;
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    top: 10%;
+                    bottom: 0;
+                    margin: auto;
                     color: #000;
                 }
             }
         }
 
         ion-card-content {
-            img {
+            img.badge-images {
                 margin-top: 5px;
                 position: relative;
                 left: 20%;
@@ -197,14 +210,28 @@ div {
                 height: 60%;
             }
 
+            img.ic-arrow {
+                margin-left: 8px;
+                width: 15px;
+                height: 15px;
+            }
+
+            span.start-here-badges {
+                font-family: 'Londrina Solid' !important;
+                font-size: 18px;
+            }
+
             p.title {
+                padding-top: 5px;
+                font-family: 'Londrina Solid' !important;
                 text-align: center;
                 color: #4db0b7;
                 font-weight: 900;
-                font-size: 15px;
+                font-size: 18px;
             }
 
             p.subtitle {
+                color: #888;
                 text-align: center;
                 font-size: 12px;
             }
