--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,6 +39,7 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  app-background: #f2f2f2,
   dark:       #222,
   button-color: #8eda20,
   button-color2: #c3402e,
