--- a/src/pages/gethere/gethere.scss
+++ b/src/pages/gethere/gethere.scss
@@ -16,7 +16,7 @@ page-gethere {
             margin: 5px 0;
         }
 
-        #getdirection-maps {
+        #getdirection_maps {
             width: 100%;
             height: 100px;
             padding: 5px 3px;
@@ -24,6 +24,7 @@ page-gethere {
 
         ion-buttons {
             text-align: center;
+            font-family: "Londrina Solid"
         }
     }
 
