--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,12 +1,43 @@
 page-settings {
     ion-list {
-        ion-item{
-            p {
+        p.select-lang {
+            width: 100%;
+            max-width: 30%;
                 float: left;
-                font-size: 20px;
+                font-size: 15px;
+                padding: 0px;
             }
+        ion-select {
+            width: 100%;
+            max-width: 70%;
+            padding: 13 0px !important;
+        }
+
+        h2 {
+            font-size: 17px;
+            font-weight: 400;
+            text-align: center;
         }
     }
+
+    .settings-footer {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        margin: 0 auto;
+
+        h4 {
+            text-align: center;
+            font-size: 17px;
+            margin: 0px;
+        }
+
+        p {
+            margin: 5px;
+        }
+    }
+
     .item-md, .item-ios {
         padding-left: 0px;
     }
