--- a/src/pages/in-game/in-game.scss
+++ b/src/pages/in-game/in-game.scss
@@ -44,7 +44,7 @@ page-in-game {
             margin-left: 20px;
         }
 
-        h1.result-info {
+        h1#result-info {
             font-size: 18px;
             color: red;
             margin-bottom: 50px;
@@ -72,8 +72,8 @@ page-in-game {
         h4.question {
             font-weight: 900;
             font-size: 14px;
-            text-align: center;
             margin-bottom: 30px;
+            text-align: center;
         }
 
         button {
@@ -142,6 +142,21 @@ page-in-game {
             height: 8px;
             border-radius: 50%;
             background: #8eda20;
+        }
+
+        .slides {
+            width: 85%;
+            position: absolute;
+            opacity: 0;
+            transition: opacity .5s;
+        }
+
+        .active-slide {
+            opacity: 1;
+        }
+
+        #gameover {
+            display: none;
         }
     }
 }
