--- a/src/pages/in-game/in-game.scss
+++ b/src/pages/in-game/in-game.scss
@@ -1,5 +1,5 @@
 page-in-game {
-    .time-n-life {
+    #time-n-life {
         h4 {
             margin: 0;
             padding: 0;
@@ -21,6 +21,12 @@ page-in-game {
             }
 
             img.lifes {
+                width: 25px;
+                height: 25px;
+                margin: 4px 4px;
+            }
+
+            img.no-life {
                 width: 25px;
                 height: 25px;
                 margin: 4px 4px;
@@ -51,7 +57,7 @@ page-in-game {
         }
     }
 
-    .score {
+    #score {
         margin: 8px 0px 8px 0px;
         h2 {
             font-size: 20px;
@@ -62,7 +68,7 @@ page-in-game {
         }
     }
 
-    .quiz {
+    #quiz {
         border-radius: 10px;
         height: calc(100% - 200px);
         background-color: #fff;
@@ -78,6 +84,10 @@ page-in-game {
 
         button {
             box-shadow: none !important;
+        }
+
+        label {
+            text-align: start;
         }
 
         /* The container */
@@ -122,41 +132,38 @@ page-in-game {
             background-color: #8eda20;
         }
 
-        /* Create the indicator (the dot/circle - hidden when not checked) */
-        .checkmark:after {
-            content: "";
-            position: absolute;
-            display: none;
-        }
+        // /* Create the indicator (the dot/circle - hidden when not checked) */
+        // .checkmark:after {
+        //     content: "";
+        //     position: absolute;
+        //     display: none;
+        // }
 
-        /* Show the indicator (dot/circle) when checked */
-        .container input:checked ~ .checkmark:after {
-            display: block;
-        }
+        // /* Show the indicator (dot/circle) when checked */
+        // .container input:checked ~ .checkmark:after {
+        //     display: block;
+        // }
 
-        /* Style the indicator (dot/circle) */
-        .container .checkmark:after {
-            top: 9px;
-            left: 9px;
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            background: #8eda20;
-        }
-
-        .slides {
-            width: 85%;
-            position: absolute;
-            opacity: 0;
-            transition: opacity .5s;
-        }
+        // /* Style the indicator (dot/circle) */
+        // .container .checkmark:after {
+        //     top: 9px;
+        //     left: 9px;
+        //     width: 8px;
+        //     height: 8px;
+        //     border-radius: 50%;
+        //     background: #8eda20;
+        // }
 
         .active-slide {
             opacity: 1;
         }
+    }
 
-        #gameover {
-            display: none;
-        }
+    ion-slide.swiper-slide {
+        align-items: flex-start;
+    }
+
+    #gameover {
+        display: none;
     }
 }
