--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,6 +43,7 @@ $colors: (
   dark:       #222,
   button-color: #8eda20,
   button-color2: #c3402e,
+  button-color3: #6699cc,
   icon-color: #eb9a0e
 );
 
