--- a/src/pages/in-game/in-game.scss
+++ b/src/pages/in-game/in-game.scss
@@ -34,11 +34,18 @@ page-in-game {
         }
 
         .time-bar {
-            border: 1px solid #fff;
+            border: 3px solid #fff;
             border-radius: 5px;
             margin: 0 16px;
             height: 30px;
-            background-color: grey;
+            background-color: #aaa;
+
+            #current-progress {
+                border-radius: 5px;
+                width: 0%;
+                background-color: green;
+                height: 24px;
+            }
         }
     }
 
@@ -196,7 +203,7 @@ page-in-game {
 
             .share-section {
                 text-align: center;
-                background-color: #ddd;
+                background-color: #eee;
                 padding: 8px 0;
 
                 h6 {
@@ -225,6 +232,7 @@ page-in-game {
     }
 
     #option-section {
+        margin-top: 20px;
         text-align: center;
 
         button {
