change to the gradient timebar

--- a/src/pages/in-game/in-game.scss
+++ b/src/pages/in-game/in-game.scss
@@ -45,6 +45,7 @@ page-in-game {
                 width: 0%;
                 background-color: green;
                 height: 24px;
+                background-image: linear-gradient(to right, #06cd7a, #ffff44);
             }
         }
     }
