--- a/src/pages/detail-animal/detail-animal.scss
+++ b/src/pages/detail-animal/detail-animal.scss
@@ -1,13 +1,177 @@
 page-detail-animal {
-    .under-construction {
-        text-align: center;
-        margin-top: 50%;
-        color: #555;
+    .title-segment {
+        font-family: 'Londrina Solid' !important;
+        background-color: #8eda20;
+        color: #fff;
+        padding: 8px 16px;
+        text-transform: uppercase;
+        text-align: left;
+        font-size: 1.5em;
+    }
 
-        h2 {
-            font-size: 15px;
+    #section-1 {
+        h1 {
+            font-family: 'Merriweather';
+            text-align: center;
+            font-size: 1.7em;
+            margin: 12px 0px 6px 0px;
+            font-weight: 400;
+        }
+
+        .instruction {
+            color: #888;
+            text-align: center;
+            margin: 5px 0;
+            h6 {
+                font-size: 1em;
+                margin: 0;
+            }
+        }
+    }
+
+    #section-2 {
+        .detail-nav {
+            background-color: #fff;
+            box-shadow: 0 1.8em #aaa;
+
+            ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                width: 100%;
+            }
+            li {
+                float: left;
+            }
+            li a {
+                display: block;
+                color: #000;
+                padding: 8px 16px;
+                text-decoration: none;
+            }
+            li a:hover {
+                background-color: #555;
+                color: #fff;
+            }
+        }
+        .animal-audio {
+            background-color: #e2e2e2;
+            clear: both;
+            padding: 8px 16px;
             ion-icon {
-                color: #0f3;
+                color: color($colors, button-color);
+                font-size: 3em;
+                float: left;
+            }
+
+            p {
+                padding: 0;
+                margin: 0;
+                padding: 1em 3em;
+            }
+        }
+        .animal-desc {
+            padding: 8px 8px;
+            p {
+                padding: 0px 8px;
+                text-align: justify;
+                font-family: 'Merriweather';
+                font-size: 1.1em;
+            }
+            div {
+                width: 100%;
+                height: 5em;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position-y: -5em;
+
+                .circle-audio {
+                    margin-top: 5px;
+                    margin-left: 5px;
+                    position: absolute;
+                    height: 25px;
+                    width: 25px;
+                    background-color: rgba(255, 255, 255, 0.9);
+                    border-radius: 50%;
+                    text-align: center;
+
+                    ion-icon {
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: .3em;
+                        bottom: 0;
+                        margin: auto;
+                        color: #888;
+                    }
+                }
+            }
+        }
+        .animal-summary {
+            font-family: 'Merriweather';
+            margin: 0 8px;
+            background-color: #fff;
+            box-shadow: 0 1px .5px #aaa;
+
+            h3.title {
+                border-top-left-radius: 6px;
+                border-top-right-radius: 6px;
+                background-color: color($colors, primary-dark);
+                color: #fff;
+                font-size: 1.1em;
+                font-weight: 300;
+                padding: 8px 8px;
+            }
+
+            .label-md, .label-ios {
+                margin: 0;
+            }
+
+            div.subtitle {
+                padding-left: 8px;
+                h6 {
+                    color: color($colors, primary-dark);
+                    font-size: .9em;
+                    margin: 0;
+                    font-weight: 300;
+                }
+                h3 {
+                    margin: 0;
+                    font-size: 1.2em;
+                }
+            }
+        }
+        .wiki-references {
+            margin: 1.3em 0;
+            background-color: #fff;
+            height: 7.5em;
+            img {
+                margin: .8em .5em;
+                float: left;
+                width: 42px;
+                height: 42px;
+            }
+            p {
+                font-size: 1.25em;
+                margin: 1.25em .5em;
+            }
+        }
+        .animal-gallery {
+            background-color: #fff;
+            .image-button {
+                padding: 16px;
+                img {
+                    height: 100px;
+                    width: 100px;
+                }
+            }
+        }
+        .animal-location {
+            p {
+                text-align: center;
+            }
+            #animal-loc {
+                height: 100px;
             }
         }
     }
