--- a/src/pages/detail-animal/detail-animal.scss
+++ b/src/pages/detail-animal/detail-animal.scss
@@ -167,11 +167,76 @@ page-detail-animal {
             }
         }
         .animal-location {
+            padding: 1.3em .8em;
             p {
                 text-align: center;
             }
-            #animal-loc {
-                height: 100px;
+            #animalloc {
+                width: 100%;
+                height: 150px;
+            }
+        }
+        .fun-facts {
+            div {
+                .card-header-md, .card-header-ios {
+                    padding: 0px;
+                }
+                ion-card {
+                    .label-md, .label-ios {
+                        margin: 0px;
+                    }
+
+                    .item-divider-md {
+                        background-color: #fff !important;
+                    }
+
+                    .item-divider-md, .item-divider-ios {
+                        padding: 0px;
+                    }
+
+                    ion-item-divider {
+                        margin: 0px;
+                    }
+                    .normalin {
+                        float: left;
+                        width: 30%;
+                        height: 30%;
+                        max-width: 30%;
+                        max-height: 30%;
+                    }
+
+                    .icon-funfact {
+                        padding-top: 5px;
+                        float: left;
+                        margin-left: 5px;
+                        width: 15px;
+                    }
+
+                    .funfact-content {
+                        padding-top: 5px;
+                        margin-left: 37%;
+                        p {
+                            text-align: center;
+                            white-space: normal;
+                            font-size: 12px;
+                        }
+                    }
+
+                    ion-card-header {
+                        width: 100%;
+                    }
+
+                    ion-card-content {
+                        .about-text {
+                            text-transform: uppercase;
+                            margin-right: 10px;
+                        }
+
+                        .share-text {
+                            color: #ef7004;
+                        }
+                    }
+                }
             }
         }
     }
