--- a/src/pages/detail-animal/detail-animal.scss
+++ b/src/pages/detail-animal/detail-animal.scss
@@ -1,4 +1,60 @@
 page-detail-animal {
+
+    .detail-nav {
+        text-align: center;
+        width: 100%;
+        // float: left;
+        background-color: #fff;
+        box-shadow: 0 .3em .7em rgba(100, 100, 100, 0.2);
+        margin-bottom: .5em;
+
+        &.detail-nav-scrolled {
+            position: fixed;
+            top: 0;
+        }
+
+        ul {
+            display: flex;
+        }
+
+        ul {
+            justify-content: space-between;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            padding: 1em .3em;
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        // ul {
+        //     list-style-type: none;
+        //     padding: 0;
+        //     margin: 0;
+        //     width: 100%;
+        // }
+        // li {
+        //     float: left;
+        // }
+        // li a {
+        //     display: block;
+        //     color: color($colors, primary-dark);
+        //     padding: 1em 1em;
+        //     text-decoration: none;
+        // }
+        // li a:hover {
+        //     background-color: #555;
+        //     color: #fff;
+        // }
+    }
+    .fab-md, .fab-ios {
+        box-shadow: none;
+    }
     .title-segment {
         font-family: 'Londrina Solid' !important;
         background-color: #8eda20;
@@ -31,31 +87,59 @@ page-detail-animal {
 
     #section-2 {
         .detail-nav {
+            text-align: center;
+            width: 100%;
+            // float: left;
             background-color: #fff;
-            box-shadow: 0 1.8em #aaa;
+            box-shadow: 0 .3em .7em rgba(100, 100, 100, 0.2);
+            margin-bottom: .5em;
+
+            &.detail-nav-scrolled {
+                position: fixed;
+                top: 0;
+            }
 
             ul {
-                list-style-type: none;
-                padding: 0;
+                display: flex;
+            }
+
+            ul {
+                justify-content: space-between;
+                list-style: none;
                 margin: 0;
-                width: 100%;
+                padding: 0;
             }
+
             li {
-                float: left;
+                padding: 1em .3em;
+                flex: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
-            li a {
-                display: block;
-                color: #000;
-                padding: 8px 16px;
-                text-decoration: none;
-            }
-            li a:hover {
-                background-color: #555;
-                color: #fff;
-            }
+
+            // ul {
+            //     list-style-type: none;
+            //     padding: 0;
+            //     margin: 0;
+            //     width: 100%;
+            // }
+            // li {
+            //     float: left;
+            // }
+            // li a {
+            //     display: block;
+            //     color: color($colors, primary-dark);
+            //     padding: 1em 1em;
+            //     text-decoration: none;
+            // }
+            // li a:hover {
+            //     background-color: #555;
+            //     color: #fff;
+            // }
         }
         .animal-audio {
-            background-color: #e2e2e2;
+            background-color: #f0f0f0;
             clear: both;
             padding: 8px 16px;
             ion-icon {
